src/style.css
@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,500;1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    text-decoration: none;
    list-style: none;
    scroll-behavior: smooth;
}

.nav-link {
    color: white;
    font-family: 'Jost', sans-serif;
}

.header {
    padding: 35px 12%;
    z-index: 100;
}

.logo {
  font-size: 25px;
  font-weight: 600;
  transition: 0.3s ease;
}
.logo:hover {
  color: orangered;
  text-shadow: 0 0 25px orangered, 0 0 50px orangered;
  transform: scale(1.1);
}

span {
  color: orangered;
}

.navbar a {
  font-weight: 500px;
  margin: 0 20px;
  border-bottom: 3px solid transparent;
  transition: 0.3s ease;
}
.navbar a:hover,
.navbar a.active {
  color: orangered;
  border-bottom: 3px solid orangered;
}

.contact {
  padding: 10px 28px;
  letter-spacing: 1px;
  font-weight: 600;
  transition: 0.3s ease;
}
.contact:hover {
  background-color: orangered;
  box-shadow: 0 0 25px orangered;
}

.home {
  padding: 100px 12% 0;
}
.home-content {
  max-width: 1000px;
}
.home-content h3 {
  font-size: 42px;
  font-weight: bold;
}
.home-content h1 {
  font-size: 62px;
  font-weight: bold;
  line-height: 1.2;
}
.home-content p {
  font-size: 18px;
}

.btns {
  width: 345px;
}
.btn1 {
  padding: 15px 28px;
  font-weight: 600;
  transition: 0.3 ease;
  cursor: pointer;
}
.btn1:hover {
  border: 2px solid black;
}
.btn2 {
  padding: 15px 28px;
  background-color: orangered;
  font-weight: 600;
  transition: 0.3 ease;
  cursor: pointer;
}
.btn2:hover {
  border: 2px solid orangered;
  color: orangered;
}

::-webkit-scrollbar {
  width: 15px;
}
::-webkit-scrollbar-thumb {
  background-color: orangered;
}
::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0.6);
  width: 50px;
}

.about {
  padding: 10% 8%;
}
.about-content h2 {
  text-align: left;
  color: white;
  font-size: 42px;
}
.about-content h3 {
  color: white;
  font-size: 62px;
}
.about-content p {
  color: white;
  font-size: 20px;
  margin: 2em 0 3em;
}

.contact-form {
  padding: 1%;
}
.contact-form h2 {
  margin-top: 3em;
  margin-bottom: 1em;
}
.contact-form form {
  max-width: 50em;
  margin: 1rem auto;
  margin-bottom: 3em;
}
.contact-form form .input-box {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.contact-form form .input-box input,
.contact-form form textarea {
  padding: 1.5em;
  border: 1px solid black;
  border-radius: .8rem;
  margin: 1rem 0;
  resize: none;
}

.btnSend {
  font-size: 24px;
}
.btnSend:hover {
  text-decoration: underline;
  cursor: pointer;
}

.footer {
  padding: 40px 0;
}
.footer ul {
  line-height: 1.6;
}
.footer ul li a {
  border-bottom: 3px solid transparent;
  transition: 0.3s ease;
}
.footer ul li a:hover {
  border-bottom: 3px solid orangered;
}
.footer ul li {
  display: inline-block;
  padding: 0 15px;
}

.my-interests {
  padding: 100px 12% 0;
}
.interests-content {
  max-width: 1000px;
}
.interests {
  margin-top: 25px;
}
.interests li {
  margin-top: 25px;
}

.link {
  color: orangered;
  transition: 0.3s ease;
}
.link:hover {
  text-decoration: underline;
}

.my-portfolio {
  padding: 0% 12% 0;
}
.portfolio-content {
  max-width: 1000px;
}
.portfolio-item {
  margin-top: 5%;
  width: 25%;
  top: 0;
  z-index: 1;
  cursor: pointer;
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
  transform: scale(1);
  &:hover {
    transform: scale(1.05);
  }
  img {
    width: auto;
    height: auto;
  }
}
.portfolio-desc {
  padding-bottom: 15%;
  transform: translateY(-50%);
  transition: 0.3s ease;
}
.portfolio-showcase {
  right: 12%;
  transform: translateY(-50%);
  transition: 0.3s ease;
}

.donations {
  padding: 100px 12% 0;
}
.donations-content {
  max-width: 1000px;
}

code {
  background-color: #212121;
  color: #F8F9FA;
  padding: 10px;
  font-family: 'Fira Code', monospace;
  border-radius: 5px;
}

li {
  margin-bottom: 20px;
  line-height: 1.8;
  padding-left: 20px;
}

